# vibe-to-live-agentic-rag-cohort-course

./: README.md  main.py  pyproject.toml  requirements.py  requirements.txt
assignment-001/: helper_functions.py  main.py  rag_agent.py
assignment-002/mcp/: server.py
assignment-002/observability/: hallucination_evals.py  rag_evals.py  span_analysis.py
assignment-003/mcp/: server.py
assignment-01/: helper_functions.py  main.py  rag_agent.py  telemetry.py  vector_search.py
assignment-02/: hallucination_evals.py
