[project]
name = "vibe-to-live-agentic-rag-cohort-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=12.6.0",
    "fastapi>=0.119.0",
    "fastembed>=0.7.3",
    "openai>=2.3.0",
    "openai-agents>=0.1.0",
    "openinference-instrumentation-openai>=0.1.39",
    "openinference-instrumentation-openai-agents>=1.3.0",
    "pydantic>=2.12.0",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.37.0",
]
